--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <h3>działa</h3>
+    <div class="content">
+        <video src="./smoke.mp4" autoplay="" muted=""></video>
+        <h3> <span class="strong"> K</span>rzysztof <span class="strong">S</span>iek - <span
+                class="strong">F</span>ront-end Developer </h3>
+    </div>
 </body>
 
 </html>
