--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
         <video src="./smoke.mp4" autoplay="" muted=""></video>
         <h3> <span class="strong"> K</span>rzysztof <span class="strong">S</span>iek - <span
-                class="strong">F</span>ront-end Developer </h3>
+                class="strong">Front</span>-end Developer </h3>
     </div>
 </body>
 
